[gd_scene load_steps=8 format=3 uid="uid://dax5a3io0acwh"]

[ext_resource type="PackedScene" uid="uid://2r12y24514hg" path="res://scenes/player.tscn" id="1_1gt0s"]
[ext_resource type="Script" path="res://scripts/game.gd" id="1_ylqcf"]
[ext_resource type="PackedScene" uid="uid://jkg0obcvjxcq" path="res://scenes/bubble.tscn" id="3_in43o"]
[ext_resource type="PackedScene" uid="uid://g6a06if7opn" path="res://scenes/bubble_killer.tscn" id="4_1lcrx"]
[ext_resource type="PackedScene" uid="uid://bpg4nlcimqbum" path="res://scenes/hud.tscn" id="5_bce1s"]
[ext_resource type="PackedScene" uid="uid://4kubqbr0tx1l" path="res://scenes/music.tscn" id="6_mitj6"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_xfife"]

[node name="Game" type="Node2D"]
script = ExtResource("1_ylqcf")
bubble_scene = ExtResource("3_in43o")
killer_bubble_scene = ExtResource("4_1lcrx")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.033119, 0.246163, 0.350208, 1)

[node name="HUD" parent="." instance=ExtResource("5_bce1s")]

[node name="Player" parent="." instance=ExtResource("1_1gt0s")]
position = Vector2(520, 206)

[node name="Bubbles" type="Node" parent="."]

[node name="Bubble" parent="Bubbles" instance=ExtResource("3_in43o")]
position = Vector2(67, 52)

[node name="Barriers" type="Node" parent="."]

[node name="TopBarrier" type="StaticBody2D" parent="Barriers"]
position = Vector2(0, 5)
rotation = 3.14159
collision_mask = 14
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barriers/TopBarrier"]
shape = SubResource("WorldBoundaryShape2D_xfife")

[node name="BottomBarrier" type="StaticBody2D" parent="Barriers"]
visible = false
position = Vector2(2, 642)
collision_mask = 14
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barriers/BottomBarrier"]
shape = SubResource("WorldBoundaryShape2D_xfife")

[node name="LeftBarrier" type="StaticBody2D" parent="Barriers"]
visible = false
position = Vector2(9, 647)
rotation = 1.5708
collision_mask = 14
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barriers/LeftBarrier"]
shape = SubResource("WorldBoundaryShape2D_xfife")

[node name="RightBarrier" type="StaticBody2D" parent="Barriers"]
position = Vector2(1146, 648)
rotation = 4.71239
collision_mask = 14
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barriers/RightBarrier"]
shape = SubResource("WorldBoundaryShape2D_xfife")

[node name="Timers" type="Node" parent="."]

[node name="BubbleGenerator" type="Timer" parent="Timers"]
unique_name_in_owner = true
wait_time = 5.0
autostart = true

[node name="BubbleKiller" parent="." instance=ExtResource("4_1lcrx")]
position = Vector2(245, 155)

[node name="Music" parent="." instance=ExtResource("6_mitj6")]

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="Timers/BubbleGenerator" to="." method="_on_bubble_generator_timeout"]
